# pfsense-api-client

./: .env  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: ACMEAccountKey.md  ACMEAccountKeyRegister.md  ACMECertificate.md  ACMECertificateAActionlistInner.md  ACMECertificateADomainlistInner.md  ACMECertificateAction.md  ACMECertificateDomain.md  ACMECertificateIssue.md  ACMECertificateRenew.md  ACMESettings.md  ARPTable.md  AUTHApi.md  AuthServer.md  AuthenticationError.md  AuthenticationErrorData.md  AvailableInterface.md  AvailablePackage.md  BINDAccessList.md  BINDAccessListEntriesInner.md  BINDAccessListEntry.md  BINDSettings.md  BINDSyncRemoteHost.md  BINDSyncSettings.md  BINDView.md  BINDZone.md  BINDZoneRecord.md  BINDZoneRecordsInner.md  CARP.md  Certificate.md  CertificateAuthority.md  CertificateAuthorityGenerate.md  CertificateAuthorityRenew.md  CertificateGenerate.md  CertificatePKCS12Export.md  CertificateRenew.md  CertificateRevocationList.md  CertificateRevocationListCertInner.md  CertificateRevocationListRevokedCertificate.md  CertificateSigningRequest.md  CertificateSigningRequestSign.md  (+614 more)
pfsense_api_client/: __init__.py  api_client.py  api_response.py  configuration.py  exceptions.py  rest.py
pfsense_api_client/api/: __init__.py  auth_api.py  diagnostics_api.py  firewall_api.py  graphql_api.py  interface_api.py  routing_api.py  services_api.py  status_api.py  system_api.py  user_api.py  vpn_api.py
pfsense_api_client/models/: __init__.py  acme_account_key.py  acme_account_key_register.py  acme_settings.py  (+640 more)
(+654 files in other folders)
